company crud finished

--- a/src/main/resources/static/my-custom/css/admin/addCompany.css
+++ b/src/main/resources/static/my-custom/css/admin/addCompany.css
@@ -57,7 +57,7 @@ img {
     align-items: center;
 }
 
-input:read-only, textarea:read-only {
+input:read-only, textarea:read-only, select:disabled {
     background-color: black !important;
     color: #0dcaf0 !important;
 }
