--- a/src/main/resources/templates/fragments/managerFrag/manager-bodyHeader.html
+++ b/src/main/resources/templates/fragments/managerFrag/manager-bodyHeader.html
@@ -8,8 +8,9 @@
                 <h2>Manager Page</h2>
                 <ol>
                     <li><a href="/manager/company/companyList">COMPANY LIST</a></li>
-                    <li><a href="/manager/food/foodList">푸드리스트</a></li>
-                    <li><a href="/admin/food/addFood">상품등록</a></li>
+                    <li><a href="/manager/food/foodList">내 전체 상품 리스트</a></li>
+                    <li><a href="/manager/food/addFood">상품등록</a></li>
+                    <li><a href="/manager/food/addMenu">멀티상품등록</a></li>
                     <li>Inner Page</li>
                 </ol>
             </div>
