--- a/src/main/resources/templates/manager/food/addFood.html
+++ b/src/main/resources/templates/manager/food/addFood.html
@@ -8,7 +8,7 @@
 <link href="/my-custom/css/admin/editFood.css?ver=2" rel="stylesheet">
 <body>
 <div th:replace="fragments/nav-top :: nav-top"/>
-<div th:replace="fragments/adminFrag/admin-bodyHeader :: admin-bodyHeader"/>
+<div th:replace="fragments/managerFrag/manager-bodyHeader :: manager-bodyHeader"/>
 
 <!-- ======= Book A Table Section ======= -->
 <section>
@@ -43,6 +43,7 @@
                             <select th:disabled="${not #strings.isEmpty(param.companyNo)}"
                                     name="companyNo" id=""
                                     class="form-control">
+                                <option value="">선택하세요</option>
                                 <option th:each="company : ${userCompany.getCompanyList()}"
                                         th:selected="${company.companyNo} == ${param.companyNo != null ? param.companyNo.toString() : ''}"
                                         th:value="${company.companyNo}"
