home 화면 구현하기 start

--- a/src/main/resources/templates/fragments/nav-top.html
+++ b/src/main/resources/templates/fragments/nav-top.html
@@ -48,8 +48,8 @@
                 <li class="book-a-table text-center"><a href="/">HOME</a></li>
                 <li class="book-a-table text-center"><a href="/admin/managerHome">MANAGER</a></li>
                 <li class="book-a-table text-center"><a href="/admin/adminHome">ADMIN</a></li>
-                <li><a href="#about">회원가입</a></li>
-                <li><a href="/food/menu">Menu</a></li>
+                <li><a href="/home/food/companyList">회원가입</a></li>
+                <li><a href="/home/food/menu">Menu</a></li>
                 <li><a href="#specials">Specials</a></li>
                 <li><a href="#events">Events</a></li>
                 <li><a href="#gallery">Gallery</a></li>
