--- a/src/main/resources/templates/admin/company/addCompany.html
+++ b/src/main/resources/templates/admin/company/addCompany.html
@@ -85,8 +85,29 @@
                     </select>
                 </div>
                 <div class="col-lg-4 col-md-6 form-group">
+                    <div class="divLabel">
+                        <label>대표 상품 선택</label>
+                    </div>
+                    <select th:field="${company.foodGroups}"
+                            class="form-select formSelect">
+                        <option value="">==상품상세구분==</option>
+                        <option class="form-control-plaintext formOption"
+                                th:each="group : ${foodGroups}"
+                                th:value="${group.name()}"
+                                th:text="${group.name()}">status</option>
+                        <!--th:text="${group.getFoodGroupsName()}">status</option>-->
+                    </select>
                 </div>
                 <div class="col-lg-4 col-md-6 form-group">
+                    <div class="divLabel">
+                        <label>대표 상품 분류</label>
+                    </div>
+                    <select id="foodKindStatus" name="foodGroupsOfTitle"
+                            class="form-select formSelect">
+                        <option class="form-control-plaintext formOption" value="">
+                            select 1 을 먼저 선택 하세요=
+                        </option>
+                    </select>
                 </div>
                 <div class="col-lg-4 col-md-6 form-group">
                     <div class="divLabel">
@@ -271,6 +292,36 @@ $(document).ready(function(){
 
 
     });
+</script>
+
+<script type="application/javascript">
+$(document).ready(function(){
+    /**
+     * FoodController 에  /food/getValues 요청시 enum 리스트를 받아서 select 박스를 구현한다.
+     * select 1 을 선택해야 select 2 의 목록의 리스트가 생성된다.
+     */
+    $('#foodGroups').on("change", function(e){
+        let val = $("#foodGroups option:selected").val();
+
+        $.ajax({
+            type : "GET",
+            url : "/food/getValues",
+            data : {foodGroupsName: val},
+            success : function(data){
+                console.log("ajax 서버응답 data : " + data);
+                let str = "";
+                str += "<option value='"+ val+ "'>" + "상품을 선택하세요" + "</option>";
+                $.each(data, function(index, val){
+                    str += "<option value='"+ val+ "'>" + val+ "</option>";
+                });
+
+                //console.log(str);
+                $("#foodKindStatus").html(str);
+
+            }// end .success
+        }); //end .ajax
+    }); // end change event
+}); // end document
 </script>
 
 <!--<script th:inline="javascript">-->
