--- a/src/main/resources/templates/home/food/companyList.html
+++ b/src/main/resources/templates/home/food/companyList.html
@@ -32,6 +32,11 @@
     background-color: black !important;
   }
 
+  .card-title {
+    color: #0dcaf0;
+    font-size: 15px;
+  }
+
 </style>
 <body>
 <div th:replace="fragments/nav-top :: nav-top"/>
@@ -45,31 +50,35 @@
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="menu-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-starters">Starters</li>
-              <li data-filter=".filter-salads">Salads</li>
-              <li data-filter=".filter-specialty">Specialty</li>
+                <a th:href="@{/home/food/companyList}">
+                  <li data-filter="*" class="filter-active">All</li>
+                </a>
+              <th:block th:each="group : ${foodGroups}">
+                <a th:href="@{/home/food/companyList(foodGroups=${group.name()})}">
+                  <li data-filter="*" class="filter-active" th:text="${group.name()}">All</li>
+                </a>
+              </th:block>
             </ul>
           </div>
         </div>
       </div>
 
-
     <div class="row">
-      <th:block th:each="companyDto : ${companyList}">
-        <div class="cardLine col-3" th:with="fullPath=${companyDto.uploadFile.fullPath}">
-          <a th:href="@{/home/food/getCompany/{companyNo}(companyNo=${companyDto.companyNo})}">
+      <th:block th:each="company : ${companyList}">
+        <div class="cardLine col-3" th:with="fullPath=${company.uploadFileDto.fullPath}">
+          <a th:href="@{/home/food/getCompany/{companyNo}(companyNo=${company.companyNo})}">
             <p></p>
             <div class="card text-white bg-primary">
               <figure>
                 <img th:if="${fullPath} != null" th:src="|/display?fullPath=${#myFormat.encode(fullPath)}|" class="menu-img" alt=""/>
                 <img th:if="${fullPath} == null" th:src="|/my-custom/images/images.jpg|" class="menu-img" alt=""/>
               </figure>
-              <div class="card-header" th:text="${companyDto.companyName}">
+              <div class="card-header" th:text="${company.companyName}">
                 My Card
               </div>
               <div class="card-body">
-                <h5 class="card-title" th:text="${companyDto.status}">Lorem</h5>
+                <h5 class="card-title" th:text="${company.status}">Lorem</h5>
+                <h5 class="card-title" th:text="${company.foodGroups}">Lorem</h5>
   <!--              <p class="card-text" th:text="${companyDto.address.city}">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam egestas sed sem ut malesuada.</p>-->
               </div>
             </div>
@@ -101,3 +110,31 @@
 <div th:replace="fragments/footer :: footer"/>
 </body>
 </html>
+
+
+<script id="entry-template" type="text/x-handlebars-template">
+  <div class="row">
+    <th:block th:each="company : ${companyList}">
+      <div class="cardLine col-3" th:with="fullPath=${company.uploadFileDto.fullPath}">
+        <a th:href="@{/home/food/getCompany/{companyNo}(companyNo=${company.companyNo})}">
+          <p></p>
+          <div class="card text-white bg-primary">
+            <figure>
+              <img th:if="${fullPath} != null" th:src="|/display?fullPath=${#myFormat.encode(fullPath)}|" class="menu-img" alt=""/>
+              <img th:if="${fullPath} == null" th:src="|/my-custom/images/images.jpg|" class="menu-img" alt=""/>
+            </figure>
+            <div class="card-header" th:text="${company.companyName}">
+              My Card
+            </div>
+            <div class="card-body">
+              <h5 class="card-title" th:text="${company.status}">Lorem</h5>
+              <h5 class="card-title" th:text="${company.foodGroups}">Lorem</h5>
+              <!--              <p class="card-text" th:text="${companyDto.address.city}">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam egestas sed sem ut malesuada.</p>-->
+            </div>
+          </div>
+        </a>
+      </div>
+    </th:block>
+  </div>
+</script>
+
