--- a/src/main/resources/templates/admin/orderItem/orderItemList.html
+++ b/src/main/resources/templates/admin/orderItem/orderItemList.html
@@ -31,6 +31,20 @@
     .ttt {
         font-size: 13px !important;
     }
+
+    input[type="checkbox"]{
+
+        width: 30px; /*Desired width*/
+
+        height: 30px; /*Desired height*/
+
+        cursor: pointer;
+
+        -webkit-appearance: none;
+
+        appearance: none;
+
+    }
 </style>
 <body>
 <div th:replace="fragments/nav-top :: nav-top"/>
@@ -69,7 +83,9 @@
           <div class="box mt-3" data-aos="zoom-in" data-aos-delay="100">
                 <div class="row">
                   <ul>
-
+                      <form action="">
+                          <input type="checkbox">
+                      </form>
                   </ul>
                 </div>
                 <div class="mr-3 mb-1">
@@ -103,7 +119,10 @@
                   <p class="ttt text-dark mt-2">구매시 아이템의 재고수량은 차감 됩니다.</p>
               </div>
               <div class="row col-lg-12 d-flex justify-content-left">
-                  <button class="mt-3 btn btn-success">구매하기</button>
+                  <form action="/admin/order/orderOnePost" method="post">
+                      <input type="hidden" name="orderItemId" th:value="${orderItem.id}">
+                      <button class="mt-3 btn btn-success">구매하기</button>
+                  </form>
               </div>
           </div>
         </div>
