--- a/src/main/resources/templates/user/joinForm.html
+++ b/src/main/resources/templates/user/joinForm.html
@@ -1,58 +1,87 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header">
+<html>
+<head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<!-- 합쳐지고 최소화된 최신 CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
+<!-- 부가적인 테마 -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+
+<!-- 합쳐지고 최소화된 최신 자바스크립트 -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
 <body>
-<h1>회원가입 페이지</h1>
-<hr/>
-<form action="/join" method="post" th:object="${userDto}">
-    <div class="input-group">
-        <label>아이디</label>
-        <input type="text" th:field="*{username}" placeholder="Username"/>
-        <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
+
+<div class="container mt-5 mb-5" style="width: 600px; margin: 100px;">
+
+    <div class="row-vh col-6">
+        <div class="col-6">
+            <h1>회원가입 페이지</h1>
+            <hr/>
+            <form action="/join" method="post" th:object="${userDto}">
+                <div class="form-group">
+                    <label>아이디</label>
+                    <input class="form-control" type="text" th:field="*{username}" placeholder="Username"/>
+                    <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
+                </div>
+                <div class="form-group">
+                    <label>이름</label>
+                    <input class="form-control" type="text" th:field="*{name}" placeholder="name"/>
+                    <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
+                </div>
+                <div class="form-group">
+                    <label>패스워드</label>
+                    <input class="form-control" type="password" th:field="*{password}" placeholder="Password"/><br/>
+                    <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
+                </div>
+                <div class="form-group">
+                    <label>이메일</label>
+                    <input class="form-control" type="email" th:field="*{email}" placeholder="Email"/><br/>
+                    <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
+                </div>
+                <div class="form-group">
+                    <label>핸드폰</label>
+                    <input class="form-control" type="text" th:field="*{phoneNumber}" placeholder="Phone"/><br/>
+                    <p th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}"></p>
+                </div>
+                <div class="form-group">
+                    <label>우편번호</label>
+                    <input class="form-control" type="text" size="5" value="" th:field="*{addressDto.zipcode}" id="zip"><input type="button" value="검색" id="btnAddr" name="btnAddr">
+                    <p th:if="${#fields.hasErrors('addressDto')}" th:errors="*{addressDto}"></p>
+                </div>
+                <div class="form-group">
+                    <label>주소</label>
+                    <input class="form-control" type="text" th:field="*{addressDto.city}" id="addr1" size="50">
+                </div>
+                <div class="form-group">
+                    <label>상세주소</label>
+                    <input class="form-control" type="text" th:field="*{addressDto.street}" id="addr2" size="10">
+                </div>
+                <br>
+
+                <div class="form-group">
+                    <button class="btn btn-success">회원가입</button>
+                    <button class="btn btn-info aaa">로그인 페이지</button>
+                </div>
+            </form>
+        </div>
     </div>
-    <div class="input-group">
-        <label>이름</label>
-        <input type="text" th:field="*{name}" placeholder="name"/>
-        <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
-    </div>
-    <div class="input-group">
-        <label>패스워드</label>
-        <input type="password" th:field="*{password}" placeholder="Password"/><br/>
-        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
-    </div>
-    <div class="input-group">
-        <label>이메일</label>
-        <input type="email" th:field="*{email}" placeholder="Email"/><br/>
-        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
-    </div>
-    <div class="input-group">
-        <label>핸드폰</label>
-        <input type="text" th:field="*{phoneNumber}" placeholder="Phone"/><br/>
-        <p th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}"></p>
-    </div>
-    <div class="input-group">
-        <label>우편번호</label>
-        <input type="text" size="5" value="" th:field="*{addressDto.zipcode}" id="zip"><input type="button" value="검색" id="btnAddr" name="btnAddr">
-        <p th:if="${#fields.hasErrors('addressDto')}" th:errors="*{addressDto}"></p>
-    </div>
-    <div class="input-group">
-        <label>주소</label>
-        <input type="text" th:field="*{addressDto.city}" id="addr1" size="50">
-    </div>
-    <div class="input-group">
-        <label>상세주소</label>
-        <input type="text" th:field="*{addressDto.street}" id="addr2" size="10">
-    </div>
-    <br>
-    <button>회원가입</button>
-</form>
-<br><br>
-<a href="/loginForm">로그인 페이지</a>
+</div>
 </body>
 </html>
+<script>
+    $(document).ready(function(){
+        $(".aaa").on("click", function(e){
+            e.preventDefault();
+            let con = confirm("로그인 페이지로 이동 하시겠습니까?");
+            if(con) location.href = "/loginForm";
+        });
+    });
+</script>
 <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
 <script th:inline="javascript">
     $(document).ready(function(){
